Fix #109561: Overwrite existing imagepath based on relativepath property

Update the filepath of an image when it already exists in the main
storage. This is useful when relative_path property is changed and we
attempt to open the same image file again.